# workspace

./: .gitignore  serve-docs.sh
.devcontainer/: devcontainer.json
src/: cabal.project
src/Dione/: Dione.cabal
src/Dione/assets/: lockingcontract-v0.1.plutus
src/Dione/onchain/: DionePlutusTx.hs
